/****** Object:  Table [dbo].[TB_CAR_COST]    Script Date: 2026-05-20 오후 4:40:07 ******/
SET ANSI_NULLS ON
GO
SET QUOTED_IDENTIFIER ON
GO
CREATE TABLE [dbo].[TB_CAR_COST](
	[COST_IDX] [int] IDENTITY(1,1) NOT NULL,
	[TERM_IDX] [int] NOT NULL,
	[USE_COM_CD] [int] NULL,
	[USE_STR_DATE] [date] NULL,
	[USE_END_DATE] [date] NULL,
	[COST_ACCEPT_CD] [char](1) NULL,
	[GAS_COST] [numeric](18, 0) NULL,
	[INSURANCE_COST] [numeric](18, 0) NULL,
	[REPAIR_COST] [numeric](18, 0) NULL,
	[TAX_COST] [numeric](18, 0) NULL,
	[ETC_COST] [numeric](18, 0) NULL,
	[RENT_TYPE_CD] [varchar](20) NULL,
	[INSURANCE_YN] [char](1) NULL,
	[TAX_DEPR_COST] [numeric](18, 0) NULL,
	[DEPR_COST] [numeric](18, 0) NULL,
	[RENT_COST] [numeric](18, 0) NULL,
	[LAST_UPT_USER_ID] [nvarchar](20) NULL,
	[LAST_UPT_DT] [datetime] NULL,
	[GAS_COST_ADJ] [numeric](18, 0) NULL,
	[INSURANCE_COST_ADJ] [numeric](18, 0) NULL,
	[REPAIR_COST_ADJ] [numeric](18, 0) NULL,
	[TAX_COST_ADJ] [numeric](18, 0) NULL,
	[ETC_COST_ADJ] [numeric](18, 0) NULL,
 CONSTRAINT [PK__TB_CAR_C__C673BBD539237A9A] PRIMARY KEY CLUSTERED 
(
	[COST_IDX] ASC
)WITH (PAD_INDEX = ON, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, FILLFACTOR = 90, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
) ON [PRIMARY]
GO
