/****** Object:  Table [dbo].[TB_CAR_USER_TERM]    Script Date: 2026-05-20 오후 4:40:07 ******/
SET ANSI_NULLS ON
GO
SET QUOTED_IDENTIFIER ON
GO
CREATE TABLE [dbo].[TB_CAR_USER_TERM](
	[TERM_IDX] [int] IDENTITY(1,1) NOT NULL,
	[CAR_IDX] [int] NOT NULL,
	[USER_ID] [nvarchar](20) NULL,
	[COM_CD] [int] NULL,
	[DEPT_CD] [int] NULL,
	[STR_DATE] [date] NULL,
	[END_DATE] [date] NULL,
 CONSTRAINT [PK__TB_CAR_U__B00DFF673552E9B6] PRIMARY KEY CLUSTERED 
(
	[TERM_IDX] ASC
)WITH (PAD_INDEX = ON, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, FILLFACTOR = 90, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
) ON [PRIMARY]
GO
