/****** Object:  Table [dbo].[TB_CAR_COST_SLIP]    Script Date: 2026-05-20 오후 4:40:07 ******/
SET ANSI_NULLS ON
GO
SET QUOTED_IDENTIFIER ON
GO
CREATE TABLE [dbo].[TB_CAR_COST_SLIP](
	[COST_IDX] [int] NOT NULL,
	[SLIP_ID] [varchar](30) NOT NULL,
	[COST_GUBUN] [char](1) NOT NULL,
	[CAR_COST_TYPE] [varchar](5) NULL,
 CONSTRAINT [PK__TB_CAR_C__73FC97FC477199F1] PRIMARY KEY CLUSTERED 
(
	[COST_IDX] ASC,
	[SLIP_ID] ASC,
	[COST_GUBUN] ASC
)WITH (PAD_INDEX = ON, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, FILLFACTOR = 90, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
) ON [PRIMARY]
GO
